[package]
name = "intrusive-collections"
version = "0.6.6"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Intrusive collections for Rust (linked list and red-black tree)"
documentation = "https://docs.rs/intrusive-collections"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/intrusive-rs"
readme = "README.md"
keywords = ["intrusive", "no_std", "list", "rbtree"]

[features]
nightly = []
alloc = []
default = ["alloc"]

[dev-dependencies]
rand = "0.3"
typed-arena = "1.2"
